# Voxelith

./: .gitignore  Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROGRESS.md  ROADMAP.md  STATUS.md
docs/reference/: VoxelithUberURP.shader  bake-spec.example.json
src/: bake.rs  lib.rs  main.rs  prefs.rs
src/ai/: client.rs  job.rs  keyring_store.rs  mock.rs  mod.rs  provider.rs  runtime.rs  voxelize.rs
src/app/: ai_actions.rs  file_ops.rs  handler.rs  hud.rs  input.rs  mod.rs  preview.rs  render.rs  shapes.rs  ui_actions.rs
src/core/: chunk.rs  mod.rs  voxel.rs  world.rs
src/editor/: clipboard.rs  commands.rs  mod.rs  raycast.rs  selection.rs  shapes.rs  socket.rs  tools.rs  transform.rs
src/io/: gltf.rs  mod.rs  obj.rs  project.rs  vox.rs
src/mesh/: ao.rs  greedy.rs  marching_cubes.rs  mod.rs  naive.rs  neighbors.rs  patch.rs  vertex.rs
src/mesh/marching_cubes/: tables.rs
src/procgen/: graph.rs  mod.rs  terrain.rs  tree.rs  wfc.rs
src/render/: camera.rs  gpu_mesh.rs  grid.rs  mod.rs  pipeline.rs  selection.rs  socket.rs
src/render/shaders/: line.wgsl  voxel.wgsl
src/ui/: hud.rs  mod.rs  panels.rs
