[package]
name = "voxelith"
version = "0.1.0"
edition = "2021"
authors = ["Voxelith Contributors"]
description = "Procedural-first voxel asset creation tool with AI generation capabilities"
license = "MIT"
repository = "https://github.com/Lynthar/Voxelith"

[features]
default = []
ai = ["dep:reqwest", "dep:tokio"]  # AI features as optional

[dependencies]
# Graphics & Windowing
wgpu = "22"
winit = "0.30"
pollster = "0.4"  # Block on async for wgpu initialization

# UI
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"

# Math
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ron = "0.8"  # Rusty Object Notation for config files

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
parking_lot = "0.12"  # Better mutexes
flate2 = "1.0"  # Compression for project files
rfd = "0.15"  # Native file dialogs

# Parallelism
rayon = "1.10"

# Noise (for procedural generation)
noise = "0.9"
rand = "0.8"

# Optional AI dependencies
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[profile.dev]
opt-level = 1  # Some optimization for faster debug builds

[profile.dev.package."*"]
opt-level = 3  # Full optimization for dependencies

[profile.release]
lto = "thin"
codegen-units = 1
