[package]
name = "voxelith"
version = "0.1.0"
edition = "2021"
authors = ["Voxelith Contributors"]
description = "Procedural-first voxel asset creation tool with AI generation capabilities"
license = "MIT"
repository = "https://github.com/Lynthar/Voxelith"

[features]
default = []

[dependencies]
# Graphics & Windowing
wgpu = "22"
winit = "0.30"
pollster = "0.4"  # Block on async for wgpu initialization

# UI
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"

# Math
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ron = "0.8"  # Rusty Object Notation for config files

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
parking_lot = "0.12"  # Better mutexes
flate2 = "1.0"  # Compression for project files
rfd = "0.15"  # Native file dialogs
dirs = "5.0"  # Cross-platform user config / cache / data directories

# Parallelism
rayon = "1.10"

# Noise (for procedural generation)
noise = "0.9"
rand = "0.8"

# AI integration: HTTP client for remote 3D-gen APIs (fal.ai, etc.),
# tokio runtime to run them off the winit main thread, keyring for
# storing API keys in the OS keychain instead of plaintext prefs.
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
keyring = "3"
# GLB → voxel conversion for AI output: gltf parses the binary glTF
# the provider returns; image decodes the PBR base-color texture so we
# can sample colors at triangle UVs (Hunyuan3D V3 doesn't ship vertex
# colors, only textures).
gltf = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.dev]
opt-level = 1  # Some optimization for faster debug builds

[profile.dev.package."*"]
opt-level = 3  # Full optimization for dependencies

[profile.release]
lto = "thin"
codegen-units = 1
